--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "quoteiq-clone",
   "version": "1.0.0",
@@ -10,6 +11,8 @@
   "dependencies": {
     "next": "14.1.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "jspdf": "^2.5.1",
+    "emailjs-com": "^3.2.0"
   }
 }
